kubernetes/parts-interchange/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: parts-interchange
  labels:
    name: parts-interchange
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parts-interchange-deployment
  namespace: parts-interchange
  labels:
    app: parts-interchange-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parts-interchange-deployment
  template:
    metadata:
      labels:
        app: parts-interchange-deployment
    spec:
      containers:
        - name: parts-interchange-container
          image: dwilson2547/parts-direct-dbms:2.3
          ports:
          - containerPort: 8080
          resources:
            limits:
              cpu: 4
              memory: 20Gi
          volumeMounts:
          - name: nfs-vol
            mountPath: /data
      volumes:
        - name: nfs-vol
          persistentVolumeClaim:
            claimName: parts-interchange-datafiles
---
apiVersion: v1
kind: Service
metadata:
  name: parts-interchange-api-entrypoint
  namespace: parts-interchange
spec:
  type: NodePort
  selector:
    app: parts-interchange-deployment
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parts-interchange-ui-deployment
  namespace: parts-interchange
  labels:
    app: parts-interchange-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parts-interchange-ui-deployment
  template:
    metadata:
      labels:
        app: parts-interchange-ui-deployment
    spec:
      containers:
        - name: parts-interchange-ui-container
          image: dwilson2547/parts-interchange-ui:1.2
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 4
              memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: parts-interchange-ui-entrypoint
  namespace: parts-interchange
spec:
  type: NodePort
  selector:
    app: parts-interchange-ui-deployment
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parts-interchange-ingress
  namespace: parts-interchange
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: parts-interchange.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parts-interchange-ui-entrypoint
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: parts-interchange-api-entrypoint
            port:
              number: 8080
  tls:
  - hosts:
    - parts-interchange.com
    secretName: parts-interchange-tls
  ingressClassName: nginx
